--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.0", features = ["derive"] }
-solana-client = "2.1"
-solana-sdk = "2.1"
-spl-token = "3.3"
-tokio = { version = "1", features = ["full"] }
-
+clap = { version = "4.4", features = ["derive"] } # Updated to the latest version
+solana-client = "2.1.7" # Latest version as of now
+solana-sdk = "2.1.7"    # Must match solana-client
+spl-token = "7.0.0"     # Updated to the latest version
+serde_json = "1.0.109"
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1.42.0", features = ["full"] } # Updated to latest
